<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faculty.UpdateFaculty"
    android:background="@color/backColor"
    android:padding="5dp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        android:elevation="3dp"
        app:fabSize="normal"
        android:contentDescription="@string/todo" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/computer_engineering"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="18dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#3e800f" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/csDepartment"
            android:nestedScrollingEnabled="false"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/csNoData">
                <include layout ="@layout/no_data_found"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/electronics_and_communication_engineering"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#3e800f"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/electronicsDepartment"
            android:nestedScrollingEnabled="false"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/electronicsNoData">
                <include layout ="@layout/no_data_found"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/electrical_department"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#3e800f"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/electricalDepartment"
            android:nestedScrollingEnabled="false"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/electricalNoData">
                <include layout ="@layout/no_data_found"/>

            </LinearLayout>

   <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mechanical_department"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#3e800f"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/mechanicalDepartment"
            android:nestedScrollingEnabled="false"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/mechanicalNoData">
                <include layout ="@layout/no_data_found"/>

            </LinearLayout>

 <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/civil_department"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#3e800f"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/civilDepartment"
            android:nestedScrollingEnabled="false"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/civilNoData">
                <include layout ="@layout/no_data_found"/>

            </LinearLayout>

 <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chemical_department"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#3e800f"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/chemicalDepartment"
            android:nestedScrollingEnabled="false"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/chemicalNoData">
                <include layout ="@layout/no_data_found"/>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/petrochemical_department"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#3e800f"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/petroDepartment"
                android:nestedScrollingEnabled="false"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/petroNoData">
                <include layout ="@layout/no_data_found"/>

            </LinearLayout>



        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>